--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>HTML & CSS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>CSS Flexbox</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
